src/parser_super_flat/snapshots/simp__parser_super_flat__tests__tests__inputs__valid__expr_after_block.snap
---
source: src/parser_super_flat/tests.rs
expression: parse(&input)
---
StmtExpr {
    inner: ExprBlock {
        tail: None,
        body: [],
    },
}
ExprInt(
    0,
)
