src/parser_super_flat/snapshots/simp__parser_super_flat__tests__tests__inputs__valid__expr_after_stmt_fn.snap
---
source: src/parser_super_flat/tests.rs
expression: parse(&input)
---
StmtFn {
    name: ExprIdent(
        "f",
    ),
    body: ExprBlock {
        tail: None,
        body: [],
    },
    params: [],
}
ExprInt(
    0,
)
