src/parser_super_flat/snapshots/simp__parser_super_flat__tests__tests__inputs__valid__expr_block_with_semi.snap
---
source: src/parser_super_flat/tests.rs
expression: parse(&input)
---
StmtExpr {
    inner: ExprBlock {
        tail: None,
        body: [],
    },
}
ExprBlock {
    tail: None,
    body: [],
}
