src/parser_super_flat/snapshots/simp__parser_super_flat__tests__tests__inputs__valid__expr_fn_call.snap
---
source: src/parser_super_flat/tests.rs
expression: parse(&input)
---
StmtExpr {
    inner: ExprCall {
        callee: ExprIdent(
            "f",
        ),
        args: [],
    },
}
StmtExpr {
    inner: ExprCall {
        callee: ExprIdent(
            "f",
        ),
        args: [
            ExprInt(
                1,
            ),
        ],
    },
}
StmtExpr {
    inner: ExprCall {
        callee: ExprIdent(
            "f",
        ),
        args: [
            ExprInt(
                1,
            ),
        ],
    },
}
StmtExpr {
    inner: ExprCall {
        callee: ExprIdent(
            "f",
        ),
        args: [
            ExprInt(
                1,
            ),
            ExprInt(
                2,
            ),
            ExprInt(
                3,
            ),
        ],
    },
}
StmtExpr {
    inner: ExprCall {
        callee: ExprIdent(
            "f",
        ),
        args: [
            ExprInt(
                1,
            ),
            ExprInt(
                2,
            ),
            ExprInt(
                3,
            ),
        ],
    },
}
