src/parser_super_flat/snapshots/simp__parser_super_flat__tests__tests__inputs__valid__expr_group.snap
---
source: src/parser_super_flat/tests.rs
expression: parse(&input)
---
StmtExpr {
    inner: ExprInt(
        0,
    ),
}
StmtExpr {
    inner: ExprCall {
        callee: ExprIdent(
            "f",
        ),
        args: [],
    },
}
