src/parser_super_flat/snapshots/simp__parser_super_flat__tests__tests__inputs__valid__expr_str.snap
---
source: src/parser_super_flat/tests.rs
expression: parse(&input)
---
StmtExpr {
    inner: ExprStr(
        "",
    ),
}
StmtExpr {
    inner: ExprStr(
        "asdf",
    ),
}
StmtExpr {
    inner: ExprStr(
        "👽",
    ),
}
