src/parser_super_flat/snapshots/simp__parser_super_flat__tests__tests__inputs__valid__stmt_fn_multi_param.snap
---
source: src/parser_super_flat/tests.rs
expression: parse(&input)
---
StmtFn {
    name: ExprIdent(
        "f",
    ),
    body: ExprBlock {
        tail: None,
        body: [],
    },
    params: [
        ExprIdent(
            "a",
        ),
        ExprIdent(
            "b",
        ),
        ExprIdent(
            "c",
        ),
    ],
}
StmtFn {
    name: ExprIdent(
        "f",
    ),
    body: ExprBlock {
        tail: None,
        body: [],
    },
    params: [
        ExprIdent(
            "a",
        ),
        ExprIdent(
            "b",
        ),
        ExprIdent(
            "c",
        ),
    ],
}
